Renumber GUI Examples